Entradas no Banco

--- a/DojoPuzzles/DojoPuzzles/DojoPuzzles.csproj
+++ b/DojoPuzzles/DojoPuzzles/DojoPuzzles.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BissextoController.cs" />
     <Compile Include="Controllers\CollatzController.cs" />
+    <Compile Include="Controllers\EntradasBancoController.cs" />
     <Compile Include="Controllers\EstatisticasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -209,6 +210,8 @@
     <Compile Include="Models\BissextoModels.cs" />
     <Compile Include="Models\Collatz.cs" />
     <Compile Include="Models\CollatzModels.cs" />
+    <Compile Include="Models\EntradasBanco.cs" />
+    <Compile Include="Models\EntradasBancoModels.cs" />
     <Compile Include="Models\Estatisticas.cs" />
     <Compile Include="Models\EstatisticasModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -280,10 +283,11 @@
     <Content Include="Views\Bissexto\BissextoCreate.cshtml" />
     <Content Include="Views\Estatisticas\EstatisticasCreate.cshtml" />
     <Content Include="Views\Estatisticas\Estatisticas.cshtml" />
+    <Content Include="Views\EntradasBanco\EntradasBanco.cshtml" />
+    <Content Include="Views\EntradasBanco\EntradasBancoCreate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\NewFolder1\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
